# SentiBot

./: .replit  README.md  prompt_senti.txt  prompt_summarization.txt  pyproject.toml  replit.nix  requirements.txt
src/: helper_cohere.py  helper_database.py  helper_generation.py  helper_nlp.py  main.py
